--- a/.github/workflows/code_quality.yaml
+++ b/.github/workflows/code_quality.yaml
@@ -2,11 +2,11 @@ name: Code Quality
 
 on:
     push:
-        branches: [master]
+        branches: [ 0.x ]
         paths-ignore:
             - README.md
     pull_request:
-        branches: [master]
+        branches: [ 0.x ]
         paths-ignore:
             - README.md
 
@@ -15,48 +15,48 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: actions/checkout@v4
+            -   uses: actions/checkout@v4
 
-            -
-                name: 'Setup PHP'
+            -   name: 'Setup PHP'
                 uses: shivammathur/setup-php@v2
                 with:
-                    php-version: '8.0'
+                    php-version: '8.2'
                     coverage: none
 
-            - name: Composer - Get Cache Directory
-              id: composer-cache
-              run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+            -   name: Composer - Get Cache Directory
+                id: composer-cache
+                run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
-            - uses: actions/cache@v3
-              id: cache-composer
-              with:
-                  path: ${{ steps.composer-cache.outputs.dir }}
-                  key: composer-php-${{ github.sha }}
-                  restore-keys: composer-php-
+            -   uses: actions/cache@v3
+                id: cache-composer
+                with:
+                    path: ${{ steps.composer-cache.outputs.dir }}
+                    key: composer-php-${{ github.sha }}
+                    restore-keys: composer-php-
 
-            - name: Composer - Create cache directory
-              run: mkdir -p /home/runner/.composer/cache
-              if: steps.cache-composer.outputs.cache-hit != 'true'
+            -   name: Composer - Create cache directory
+                run: mkdir -p /home/runner/.composer/cache
+                if: steps.cache-composer.outputs.cache-hit != 'true'
 
-            - name: Composer - Validate composer.json and composer.lock
-              run: composer validate --strict
+            -   name: Composer - Validate composer.json and composer.lock
+                run: composer validate --strict
 
-            - name: Composer - Github Auth
-              run: composer config -g github-oauth.github.com ${{ github.token }}
+            -   name: Composer - Github Auth
+                run: composer config -g github-oauth.github.com ${{ github.token }}
 
-            - name: Composer - Update dependencies
-              run: composer update --no-progress
+            -   name: Composer - Update dependencies
+                run: composer update --no-progress
 
-            - name: Yarn install
-              uses: borales/actions-yarn@v4
-              with:
-                  cmd: install
+            -   name: Setup node
+                uses: actions/setup-node@v4
+                with:
+                    node-version: 18
 
-            - name: Yarn ESLint
-              uses: borales/actions-yarn@v4
-              with:
-                  cmd: lint
+            -   name: Install
+                run: npm install
 
-            - name: TwigCS - Check
-              run: vendor/bin/twigcs templates/ --severity error --display blocking --reporter githubAction
+            -   name: Lint
+                run: npm run lint
+
+            -   name: TwigCS - Check
+                run: vendor/bin/twigcs templates/ --severity error --display blocking --reporter githubAction
