--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "sylius-tailwind-theme",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint -c .eslintrc.cjs ./assets"
+    "lint": "eslint -c .eslintrc.cjs ./assets",
+    "lint-style": "stylelint --fix --no-cache \"./assets/**/*.css\""
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
+    "axios": "^1.6.7",
     "daisyui": "^4.7.2",
+    "eslint": "^8.56.0",
+    "lint-staged": "^15.2.2",
+    "stylelint": "^16.2.1",
+    "stylelint-config-standard": "^36.0.0",
     "tailwindcss": "^3.4.1"
   }
 }
