--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "stylelint": "^16.2.1",
     "stylelint-config-standard": "^36.0.0",
     "tailwindcss": "^3.4.1"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1"
   }
 }
