--- a/.env.local.dist
+++ b/.env.local.dist
@@ -3,3 +3,4 @@ SITE_DOMAIN_NAME=https://sylius-tailwindcss-theme.ddev.site
 DOMAIN=sylius-tailwindcss-theme.ddev.site
 MAILER_DSN=smtp://localhost:1025
 MAILER_URL=smtp://localhost:1025
+TRUSTED_PROXIES=127.0.0.1,10.0.0.0/8,REMOTE_ADDR
