--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,6 @@ jobs:
         run: |
             helm upgrade --install sylius . --namespace sylius \
                 --set mariadb.enabled=true \
-                --set ingress.main.enabled=true
+                --set ingress.main.enabled=true \
+                --set-string controllers.main.annotations.commit=${{ github.sha }} \
+                --set-string controllers.main.containers.env.COMMIT=${{ github.sha }}
