--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,11 +37,14 @@ jobs:
       uses: docker/metadata-action@v5
       with:
         images: adeliom/sylius-tailwindcss-theme
+        flavor: |
+          latest=true
         tags: |
-          type=semver,pattern={{major}}.{{minor}}.{{patch}}
-          type=semver,pattern={{major}}.{{minor}}
-          type=semver,pattern={{major}}
-          
+          type=ref,event=branch
+          type=ref,event=tag
+          type=ref,event=pr
+          type=sha,prefix=,format=long
+
     - name: Build and push
       uses: docker/build-push-action@v4
       with:
