tests: rework project installation
Signed-off-by: Jérôme Engeln <jerome.engeln@adeliom.com>

--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,29 @@ yarn-error.log
 ###< symfony/web-server-bundle ###
 
 install/Application
+tests/Application
 .idea
+
+/phpspec.yml
+/package-lock.json
+/.php-version
+/php.ini
+/node_modules
+/yarn.lock
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
+
+###> friends-of-behat/symfony-extension ###
+/behat.yml
+###< friends-of-behat/symfony-extension ###
+
+###> liip/imagine-bundle ###
+/public/media/cache/
+###< liip/imagine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
