--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "sylius/sylius": "1.12.*",
-        "symfony/webpack-encore-bundle": "^1.12"
+        "php": "~7.4|~8.0|~8.1",
+        "symfony/webpack-encore-bundle": "^1.12",
+        "ext-json": "*",
+        "ext-intl": "*",
+        "sylius/sylius": ">=1.8 <1.13"
     },
     "require-dev": {
         "behat/behat": "^3.13.0",
