--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,5 +18,17 @@
 
         <env name="APP_ENV" value="test"/>
         <env name="SHELL_VERBOSITY" value="-1" />
+
+        <!-- ###+ symfony/framework-bundle ### -->
+        <env name="APP_ENV" value="dev"/>
+        <env name="APP_SECRET" value="ed6279846456388a7124bd4f02b6b891"/>
+        <!-- env name="TRUSTED_PROXIES" value="127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16" -->
+        <!-- env name="TRUSTED_HOSTS" value="'^(localhost|example\.com)$'" -->
+        <!-- ###- symfony/framework-bundle ### -->
+
+        <!-- ###+ hwi/oauth-bundle ### -->
+        <env name="FB_ID" value=""/>
+        <env name="FB_SECRET" value=""/>
+        <!-- ###- hwi/oauth-bundle ### -->
     </php>
 </phpunit>
